Main: Styles add

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body id="bgChanging">
         
         <div id="score">
-            <div class="score-player1">0</div>
-            <div class="score-player2">0</div>
+            <div id="score-player1">0</div>
+            <div id="score-player2">0</div>
         </div>
 
         <div id="lineCamp"></div>
